--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:4422;User Id=postgres;Password=taskmgtpw;Database=task_mgt"
+    "DefaultConnection": "Server=localhost:4422;User Id=postgres;Password=taskmgtpw;Database=task_mgt;Include Error Detail=true"
   }
 }
