--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -7,5 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:4422;User Id=postgres;Password=taskmgtpw;Database=task_mgt;Include Error Detail=true"
+  },
+  "JwtBearerSettings": {
+    "Scheme": "Bearer",
+    "Issuer": "https://localhost:7173/",
+    "Key": "91D46B72-5CCF-4B70-A46B-CDE160E2DE28",
+    "AuthorizationHeaderName": "Authorization",
+    "SessionTimeout": 600
   }
 }
